[package]
name = "driving-school-booker"
version = "0.1.0"
authors = ["itok01 <contact@itok01.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.3"
